# io-email

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  flake.nix  shell.nix
examples/: tokio_imap_list_mailboxes.rs
src/: address.rs  client.rs  coroutine.rs  envelope.rs  event.rs  flag.rs  lib.rs  mailbox.rs  watch.rs
src/envelope/: event.rs  mod.rs  types.rs
src/envelope/gmail/: list.rs  mod.rs  watch.rs
src/envelope/imap/: diff.rs  list.rs  search.rs  watch.rs
src/envelope/jmap/: diff.rs  list.rs  mod.rs  search.rs  watch.rs
src/envelope/m2dir/: list.rs  mod.rs  search.rs
src/envelope/maildir/: list.rs  search.rs
src/flag/: types.rs
src/flag/gmail/: store.rs
src/flag/imap/: store.rs
src/flag/jmap/: store.rs
src/flag/m2dir/: store.rs
src/flag/maildir/: store.rs
src/gmail/: client.rs  convert.rs  mod.rs
src/imap/: client.rs  convert.rs  envelope_diff.rs  envelope_list.rs  envelope_search.rs  flag_add.rs  flag_delete.rs  flag_set.rs  flag_store.rs  mailbox_create.rs  mailbox_delete.rs  mailbox_list.rs  message_add.rs  message_copy.rs  message_delete.rs  message_get.rs  message_move.rs  mod.rs  watch.rs  watch_mailbox.rs
src/jmap/: client.rs  convert.rs  envelope_diff.rs  envelope_list.rs  envelope_search.rs  flag_add.rs  flag_delete.rs  flag_set.rs  flag_store.rs  mailbox_create.rs  mailbox_delete.rs  mailbox_list.rs  message_add.rs  message_copy.rs  message_delete.rs  message_get.rs  message_move.rs  message_send.rs  mod.rs  watch.rs  watch_mailbox.rs
src/m2dir/: client.rs  convert.rs  envelope_list.rs  envelope_search.rs  flag_store.rs  mailbox_create.rs  mailbox_delete.rs  mailbox_list.rs  message_add.rs  message_copy.rs  message_delete.rs  message_get.rs  message_move.rs  mod.rs
src/mailbox/: mod.rs  types.rs
src/mailbox/gmail/: create.rs  delete.rs  list.rs
src/mailbox/imap/: create.rs  delete.rs  list.rs
src/mailbox/jmap/: create.rs  delete.rs  list.rs
src/mailbox/m2dir/: create.rs  delete.rs  list.rs
src/mailbox/maildir/: create.rs  delete.rs  list.rs
src/maildir/: client.rs  convert.rs  envelope_list.rs  envelope_search.rs  flag_add.rs  flag_delete.rs  flag_set.rs  flag_store.rs  mailbox_create.rs  mailbox_delete.rs  mailbox_list.rs  message_add.rs  message_copy.rs  message_delete.rs  message_get.rs  message_move.rs  mod.rs  watch.rs
src/message/: mod.rs
src/message/gmail/: copy.rs  delete.rs  get.rs  mod.rs  move.rs  send.rs
src/message/imap/: add.rs  copy.rs  delete.rs  get.rs  move.rs
src/message/jmap/: add.rs  copy.rs  delete.rs  get.rs  mod.rs  move.rs  send.rs
src/message/m2dir/: add.rs  copy.rs  delete.rs  get.rs  move.rs
src/message/maildir/: add.rs  copy.rs  delete.rs  get.rs  mod.rs  move.rs
src/message/smtp/: send.rs
src/search/: error.rs  mod.rs  parser.rs  query.rs
src/search/filter/: grammar.abnf  parser.rs  query.rs
src/search/sort/: mod.rs  parser.rs  query.rs
src/smtp/: client.rs  convert.rs  message_send.rs  mod.rs
