[package]
name = "io-email"
description = "Email client library"
version = "0.0.1"
authors = ["soywod <pimalaya.org@posteo.net>"]
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "email"]
keywords = ["io-free", "coroutine", "email", "imap", "jmap"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/io-email/latest/io_email"
repository = "https://github.com/pimalaya/io-email"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
client = ["pimalaya-stream/std", "io-imap?/client", "io-jmap?/client", "io-maildir?/client", "io-m2dir?/client", "io-smtp?/client"]
imap = ["dep:io-imap", "dep:mail-parser", "dep:rfc2047-decoder", "dep:uuid"]
jmap = ["dep:io-jmap", "dep:io-http", "io-http?/client", "dep:mail-parser", "dep:secrecy", "dep:url"]
smtp = ["dep:io-smtp"]
maildir = ["client", "dep:io-maildir", "io-maildir?/client", "io-maildir?/parser", "dep:mail-parser", "dep:notify"]
m2dir = ["client", "dep:io-m2dir", "io-m2dir?/client", "dep:mail-parser"]
search = ["dep:chumsky"]
serde = ["dep:serde", "chrono/serde", "mail-parser?/serde"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
chumsky = { version = "0.13", default-features = false, optional = true }
io-http = { version = "0.0.3", default-features = false, optional = true }
io-imap = { version = "0.0.1", default-features = false, optional = true }
io-jmap = { version = "0.0.1", default-features = false, optional = true }
io-m2dir = { version = "0.0.1", default-features = false, optional = true }
io-maildir = { version = "0.0.1", default-features = false, optional = true }
io-smtp = { version = "0.0.1", default-features = false, optional = true }
log = { version = "0.4", default-features = false }
mail-parser = { version = "0.11", optional = true }
notify = { version = "8", optional = true, default-features = false, features = ["macos_kqueue"] }
pimalaya-stream = { version = "0.0.1", default-features = false, optional = true }
rfc2047-decoder = { version = "1", optional = true }
secrecy = { version = "0.10", optional = true }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
thiserror = { version = "2", default-features = false }
url = { version = "2.5", default-features = false, optional = true }
uuid = { version = "1.19", features = ["v4"], optional = true }

[dev-dependencies]
tempfile = "3"

# [patch.crates-io]
# io-http.path = "../io-http"
# io-imap.path = "../io-imap"
# io-jmap.path = "../io-jmap"
# io-m2dir.path = "../io-m2dir"
# io-maildir.path = "../io-maildir"
# io-smtp.path = "../io-smtp"
# pimalaya-stream.path = "../stream"

[patch.crates-io]
io-http.git = "https://github.com/pimalaya/io-http"
io-imap.git = "https://github.com/pimalaya/io-imap"
io-jmap.git = "https://github.com/pimalaya/io-jmap"
io-m2dir.git = "https://github.com/pimalaya/io-m2dir"
io-maildir.git = "https://github.com/pimalaya/io-maildir"
io-smtp.git = "https://github.com/pimalaya/io-smtp"
pimalaya-stream.git = "https://github.com/pimalaya/stream"
