[package]
name = "io-email"
description = "Email client library"
version = "0.0.1"
authors = ["soywod <pimalaya.org@posteo.net>"]
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "email"]
keywords = ["io-free", "coroutine", "email", "imap", "jmap"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/io-email/latest/io_email"
repository = "https://github.com/pimalaya/io-email"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["client"]
client = ["pimalaya-stream/std", "io-imap?/client", "io-jmap?/client", "io-smtp?/client"]
imap = ["dep:io-imap", "dep:mail-parser", "dep:rfc2047-decoder", "dep:uuid"]
jmap = ["dep:io-jmap", "dep:io-http", "dep:secrecy", "dep:url"]
smtp = ["client", "dep:io-smtp", "dep:mail-parser"]
maildir = ["client", "dep:io-maildir", "io-maildir?/client", "io-maildir?/parser", "dep:mail-parser", "dep:gethostname"]
m2dir = ["client", "dep:io-m2dir", "io-m2dir?/client", "dep:mail-parser"]
search = ["dep:chumsky"]
serde = ["dep:serde", "chrono/serde", "mail-parser?/serde"]
rustls-ring = ["client", "pimalaya-stream/rustls-ring", "io-imap?/rustls-ring", "io-jmap?/rustls-ring", "io-smtp?/rustls-ring", "dep:url"]
rustls-aws = ["client", "pimalaya-stream/rustls-aws", "io-imap?/rustls-aws", "io-jmap?/rustls-aws", "io-smtp?/rustls-aws", "dep:url"]
native-tls = ["client", "pimalaya-stream/native-tls", "io-imap?/native-tls", "io-jmap?/native-tls", "io-smtp?/native-tls", "dep:url"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
chumsky = { version = "0.13", default-features = false, optional = true }
gethostname = { version = "1", optional = true }
io-http = { version = "0.0.3", default-features = false, optional = true }
io-imap = { version = "0.0.1", default-features = false, optional = true }
io-jmap = { version = "0.0.1", default-features = false, optional = true }
io-m2dir = { version = "0.0.1", default-features = false, optional = true }
io-maildir = { version = "0.0.1", default-features = false, optional = true }
io-smtp = { version = "0.0.1", default-features = false, optional = true }
log = { version = "0.4", default-features = false }
mail-parser = { version = "0.11", optional = true }
notify = { version = "8", optional = true, default-features = false, features = ["macos_kqueue"] }
pimalaya-stream = { version = "0.0.1", default-features = false, optional = true }
rfc2047-decoder = { version = "1", optional = true }
secrecy = { version = "0.10", optional = true }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
thiserror = { version = "2", default-features = false }
url = { version = "2.5", default-features = false, optional = true }
uuid = { version = "1.19", features = ["v4"], optional = true }

[dev-dependencies]
env_logger = "0.11"
tempfile = "3"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt"] }

[[example]]
name = "tokio_imap_list_mailboxes"
required-features = ["client", "imap"]

# [patch.crates-io]
# imap-codec.git = "https://github.com/soywod/imap-codec"
# io-http.path = "../io-http"
# io-imap.path = "../io-imap"
# io-jmap.path = "../io-jmap"
# io-m2dir.path = "../io-m2dir"
# io-maildir.path = "../io-maildir"
# io-smtp.path = "../io-smtp"
# pimalaya-stream.path = "../stream"

[patch.crates-io]
imap-codec.git = "https://github.com/soywod/imap-codec"
io-http.git = "https://github.com/pimalaya/io-http"
io-imap.git = "https://github.com/pimalaya/io-imap"
io-jmap.git = "https://github.com/pimalaya/io-jmap"
io-m2dir.git = "https://github.com/pimalaya/io-m2dir"
io-maildir.git = "https://github.com/pimalaya/io-maildir"
io-smtp.git = "https://github.com/pimalaya/io-smtp"
pimalaya-stream.git = "https://github.com/pimalaya/stream"
